# rag-enterprise

./: .coverage  .dockerignore  .env  .env.docker  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EnterpriseRAG.pptx  LICENSE  MILESTONES.md  Makefile  README.md  SECURITY.md  TODOS.md  deferred-items.md  docker-compose.yml  entities.json  main.py  mempalace.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-eval.txt  requirements.txt
.github/workflows/: blue-green-deploy.yml  ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS-v1.8.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  agent-history.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-MILESTONE-AUDIT.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-MILESTONE-AUDIT.md  v1.3-REQUIREMENTS.md  v1.3-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md  v1.6-REQUIREMENTS.md  v1.6-ROADMAP.md  v1.7-REQUIREMENTS.md  v1.7-ROADMAP.md  v1.7-release-tag.md  v1.8-MILESTONE-AUDIT.md  v1.8-REQUIREMENTS.md  v1.8-ROADMAP.md  v1.9-REQUIREMENTS.md  v1.9-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v1.1-track-a-research.md
config/: __init__.py  settings.py
controllers/: api.py  memory.py
docker/eval/: Dockerfile.eval
docker/nginx/: nginx.conf
docker/redis/: redis.conf
docs/: DOCKER_DEPLOY.md  RUNBOOK.md  agent-architecture.md  demo.cast  memory-eviction.md  release-notes-v1.7.md  v1.4-design.md
eval/: __init__.py  category_report.py  models.py  ragas_runner.py  report_renderer.py
k8s/: configmap.yaml  ingress.yaml  namespace.yaml
scripts/: backfill_fact_embeddings.py  check_pgvector_version.sh  check_typing_hygiene.py  eval_ci_gate.py  evict_long_term_facts.py  generate_qa_pairs.py  ingest_batch.py  verify_ocr_bake.sh
services/: ingest_worker.py  mcp_server.py  pipeline.py
static/: admin.css  admin.html  admin.js  agent.css  agent.html  agent.js  ui.css  ui.html  ui.js
tests/: conftest.py
utils/: asyncpg_helper.py  cache.py  logger.py  metrics.py  models.py  observability.py  tasks.py
(+670 files in other folders)
