[project]
name = "rag-enterprise"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic[eval]>=0.89.0",
    "anyio[eval]>=4.7.0",
    "asyncpg>=0.30.0",
    "beautifulsoup4>=4.12.3",
    "datasets[eval]>=4.7.0",
    "fastapi>=0.128.0",
    "httpx[eval]>=0.28.1",
    "jinja2[eval]>=3.1.5",
    "langchain-community[eval]>=0.3.14",
    "langchain-openai[eval]>=0.4.1",
    "langchain[eval]>=1.2.10",
    "langdetect>=1.0.9",
    "langfuse>=2.57.2",
    "loguru[eval]>=0.7.3",
    "lxml>=5.3.0",
    "numpy[eval]>=1.26.4",
    "openai[eval]>=2.26.0",
    "openpyxl[eval]>=3.1.5",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "pandas[eval]>=3.0.1",
    "pdfplumber>=0.11.9",
    "pgvector>=0.3.0",
    "prometheus-client>=0.21.1",
    "pydantic[eval]>=2.10.4",
    "pydantic-settings[eval]>=2.7.0",
    "pymupdf>=1.27.2",
    "pytest[eval]>=9.0.3",
    "pytest-asyncio[eval]>=1.3.0",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "python-docx>=1.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.18",
    "ragas[eval]>=0.4.3",
    "rank-bm25==0.2.2",
    "redis>=7.3.0",
    "scipy[eval]>=1.17.1",
    "sentence-transformers>=5.2.3",
    "slowapi>=0.1.9",
    "tenacity==9.0.0",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
eval = [
    "anthropic>=0.89.0",
    "anyio>=4.7.0",
    "datasets>=4.7.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-openai>=0.2.14",
    "loguru>=0.7.3",
    "numpy>=1.26.4",
    "openai>=2.26.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "pytest==9.0.3",
    "pytest-asyncio>=1.3.0",
    "ragas>=0.4.3",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "mypy>=1.14.0",
    "pytest==9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov==6.0.0",
    "pytest-timeout==2.3.1",
    "ruff>=0.8.6",
    "types-requests>=2.32.0",
]

[tool.uv]
managed = true

[tool.uv.workspace]
members = []
